<resources>
    <string name="app_name">SVLoans</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="login_text">Login Page</string>
    <string name="username_text">User Name</string>
    <string name="password_text">Password</string>
    <string name="attempt_text">Attempt</string>
    <string name="button_login_text">Login</string>
    <string name="screen_page_text">Welcome  to the second page</string>
    <string name="mobile">mobileNo</string>
    <string name="email">hello@example.com</string>
    <string name="title_activity_adminnew">adminnew</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SVLoans</string>
    <string name="nav_header_subtitle">"9940366799"</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_tele_caller">TeleCaller</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_user_home">UserHome</string>
</resources>